# wjelement

./: .gitignore  CMakeLists.txt  COPYING.MIT  INSTALL  Makefile-all  README  README.md  README_PlanetLabs.md  flake.nix  pkg-config.pc.cmake
documentation/: index.html  wjelement.html  wjwriter.html
example/: Makefile  example.c  layout.json  layout.schema  validate.c
include/: CMakeLists.txt  hulautil.h  memmgr.h  nmutil.h  wjelement.h  wjreader.h  wjwriter.h  xpl.h
src/: CMakeLists.txt  README
src/cli/: CMakeLists.txt  cmds.c  wje  wjecli.c  wjecli.h
src/documentation/: wjreader.html
src/example/: example.c
src/lib/: CMakeLists.txt  xpl.c
src/wjelement/: CMakeLists.txt  element.c  element.h  hash.c  schema.c  search.c  types.c  wjeunit.c
src/wjreader/: CMakeLists.txt  wjreader.c
src/wjwriter/: CMakeLists.txt  wjwriter.c
windows/: ReadMe.txt  wjelement-VC100.sln  wjelement-VC100.vcxproj  wjelement.sln  wjelement.vcproj
